--- a/oppgave3.html
+++ b/oppgave3.html
@@ -9,9 +9,12 @@
 
     <!-- HER SKRIVER DU/DERE ALLE SVARENE FOR ALLE GRUPPEMEDLEMMENE!
 
+    Hvert gruppemedlem skal skrive 100-200 ord hver per hovedspørsmål (det er 3 hovedspørsmål).
 
 
-        GRUPPEMEDLEM 1 SVAR:
+
+        GRUPPEMEDLEM 1 SVAR: 
+
 
 
 
