--- a/oppgave4-gruppemedlem3.html
+++ b/oppgave4-gruppemedlem3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oppgave 4 - Gruppemedlem 3</title>
+    <title>Oppgave 4 - Sebastian 3</title>
     <!-- LØSES BARE HVIS MAN HAR JOBBET 2 ELLER 3 SAMMEN -->
 </head>
 <body>
