--- a/oppgave2.html
+++ b/oppgave2.html
@@ -17,6 +17,9 @@
     <label for="movie-year">År:</label>
     <input type="text" id="movie-year" placeholder="Skriv inn utgivelsesåret">
     <br>
+    <label for="movie-title">Kategori:</label>
+    <input type="text" id="Kategori" placeholder="Skriv inn filmens Kategori">
+    <br>
     <button id="add-movie-btn">Legg til film i array</button>
     <button id="show-movies-btn">Vis alle filmer</button>
     <div id="error-message" style="color: red; margin-top: 10px;"></div>
